[package]
name = "sand-sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [profile.release]
# debug = true

[dependencies]
enum-iterator = "1.4.1"
fastrand = "1.9.0"
pixels = "0.12.1"
winit = "0.28.5"
winit_input_helper = "0.14.1"
